--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 Hello!! This is Maheswari.S,
                 from SRM University, Amaravathi. I'm a computer science undergraduate at SRM. I am a person who is Focused and quick-learner and dont know to think inside the box.</div>
             <div class="back">
-                My Baby
+                Undergraduate at SRM University
             </div>
         </div>
        </div>
